--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Module-Starter-Plugin-TT2
-version:      0.01
+version:      0.04
 version_from: lib/Module/Starter/Plugin/TT2.pm
 installdirs:  site
 requires:
+    Module::Starter:               1.2501
     Template:                      2
     Test::More:                    0
 
