Import of RJBS/Module-Starter-Plugin-TT2-0.123 from CPAN.
gitpan-cpan-distribution: Module-Starter-Plugin-TT2
gitpan-cpan-version:      0.123
gitpan-cpan-path:         RJBS/Module-Starter-Plugin-TT2-0.123.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 --- #YAML:1.0
 name:                Module-Starter-Plugin-TT2
-version:             0.122
+version:             0.123
 abstract:            TT2 templates for Module::Starter::Template
-license:             ~
+license:             perl
 generated_by:        ExtUtils::MakeMaker version 6.31
 distribution_type:   module
 requires:     
