--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
 --- #YAML:1.0
 name:                Module-Starter-Plugin-TT2
-version:             0.123
+version:             0.124
 abstract:            TT2 templates for Module::Starter::Template
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.31
+generated_by:        ExtUtils::MakeMaker version 6.36_01
 distribution_type:   module
 requires:     
-    Module::Starter:               1.2501
+    Module::Starter:               1.47
     Template:                      2
     Test::More:                    0
 meta-spec:
